--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "define-component": "^0.0.0",
     "gh-pages": "^4.0.0",
+    "jquery": "^3.6.0",
+    "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "reactivue": "^0.4.4",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -23,7 +27,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -44,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.14"
   }
 }
